--- a/_posts/2019-04-24-tlaps.markdown
+++ b/_posts/2019-04-24-tlaps.markdown
@@ -20,7 +20,9 @@ description: "A beginner's experience with TLAPS (The TLA+ Proof System)"
     - [4.1. Running these proofs](#41-running-these-proofs)
 - [5. Proving Transitive More-Than relationships](#5-proving-transitive-more-than-relationships)
 - [6. Proving Some Square Root Stuff: Using Operators and Structured Proofs](#6-proving-some-square-root-stuff-using-operators-and-structured-proofs)
-- [Work in progress](#work-in-progress)
+- [7. Dividing Linear Combinations](#7-dividing-linear-combinations)
+    - [7.1. Not following my own advice](#71-not-following-my-own-advice)
+- [8. Conclusions](#8-conclusions)
 
 <!-- /TOC -->
 
@@ -29,7 +31,7 @@ description: "A beginner's experience with TLAPS (The TLA+ Proof System)"
 - A basic understanding of TLA+ syntax. Even without this knowledge, perhaps the syntax in this post will be self-explanatory. 
 
 ## 2. Motivation
-The resources in my first TLA+ post were extremely useful in understanding the TLA+/TLAPS syntax and semantics, but I found each source individually to be either too focused on specific examples or too general. This post will focus on interleaving examples of increasing complexity with the syntactical constructs in the language. 
+The resources in my first TLA+ post were extremely useful to me in understanding the TLA+/TLAPS syntax and semantics, but I found each source individually to be either too focused on specific examples or too general. This post will focus on interleaving examples of increasing complexity with the syntactical constructs in the language. 
 
 ## 3. Getting Started
 ### 3.1. Pre-Requisites 
@@ -206,4 +208,105 @@ Is saying that "We can prove the goal HasSqrt(X) for X in {4, 9} by adding the f
 
 ![HasSqrt](/assets/images/tlaps/sqrt.png)
 
-## Work in progress
+## 7. Dividing Linear Combinations
+We want to prove an interesting theorem: 
+
+If:
+- A divides B without remainder, and 
+- A divides C without remainder
+
+Then:
+- A divides Bx + Cy (the "linear combination" of B and C) without remainder, where x and y are any two integers. 
+
+First we need to define what it means for some value to divide another. We will define it as:
+```
+Divides(n, d) == d > 0 /\ \E k \in Nat : n = d * k
+```
+So for `d` to divide some `n`, `d` must be more than 0, and there must be a number `k` such that `d * k = n`. We could also define it as `n % d = 0`, but this seems harder to work with: we'd have to prove of `d > 0` and so on. 
+
+Let's state the theorem as specified:
+
+```
+THEOREM LinearCombinationDivides == 
+    ASSUME
+        NEW A \in Nat,
+        NEW B \in Nat,
+        NEW C \in Nat,
+        Divides(B, A),
+        Divides(C, A)
+    PROVE
+        \A x, y \in Nat : Divides((B * x) + (C * y), A)
+```
+
+This will require a longer structured proof. Simply put: `PROOF OBVIOUS` fails here, citing insufficient facts, as does `PROOF BY DEF Divides`: even an expansion of the definition Divides in not enough for automatic inference of this result. This was the proof that worked for me: 
+
+```
+THEOREM LinearCombinationDivides == 
+    ASSUME
+        NEW A \in Nat,
+        NEW B \in Nat,
+        NEW C \in Nat,
+        Divides(B, A),
+        Divides(C, A)
+    PROVE
+        \A x, y \in Nat : Divides((B * x) + (C * y), A)
+PROOF
+    <1>1  PICK k \in Nat : B = A * k BY DEF Divides
+    <1>2  PICK m \in Nat : C = A * m BY DEF Divides
+    <1>3  TAKE x \in Nat 
+    <1>4  (B * x) = (A * k) * x BY <1>1
+    <1>5  TAKE y \in Nat
+    <1>6  (C * y) = (A * m) * y BY <1>2
+    <1>7  (B * x) + (C * y) = ((A * k) * x) + ((A * m) * y) BY <1>1, <1>2
+    <1>8  ((A * k) * x) + ((A * m) * y) = A * (k * x + m * y) BY <1>7
+    <1>9  (B * x) + (C * y) = A * (k * x + m * y) BY <1>7, <1>8
+    <1>10 QED BY <1>9 DEF Divides
+```
+
+There are a lot of new concepts, and we will explore them step-wise. 
+
+`<1>1  PICK k \in Nat : B = A * k BY DEF Divides`
+
+Step <1>1 states that for the rest of the proof, we are going to `PICK` a value k such that B = A * k, and we state that the reason we can do this is because of the definition of Divides. This makes sense: we said Divides(B, A) which implies B = A * k. Why didn't we say `<1>1  \E k \in Nat : B = A * k BY DEF Divides` instead (`\E` vs `PICK`)? `\E k...` makes the definition of `k` local to only that step, `PICK` makes `k` accessible to the rest of the proof when we include the step elsewhere. Maybe it can be thought of as a private variable (`\E k`) vs a public variable (`PICK k`).
+
+`<1>2  PICK m \in Nat : C = A * m BY DEF Divides`
+
+Step <1>2 is pretty much identical to step 1, just that we are doing the same thing for C. 
+
+`<1>3  TAKE x \in Nat`
+
+Step <1>3 is the first **proof-less structured proof step** that we have encountered. This can be thought of as equivalent to "for all y in Nat...". Note the difference here: `TAKE` is like for-all and doesn't require proof, `PICK` is like there-exists and does require proof.
+
+`<1>4  (B * x) = (A * k) * x BY <1>1`
+
+In Step <1>4, we say that by adding the step <1>1 (`PICK k \in Nat : B = A * k BY DEF Divides`) to our list of facts for this step, we can prove that `(B * x) = (A * k) * x`, which makes sense since we are just expanding the definition of B. We do this for steps <1>5 and <1>6 for C as well. 
+
+`<1>7  (B * x) + (C * y) = ((A * k) * x) + ((A * m) * y) BY <1>1, <1>2`
+`<1>8  ((A * k) * x) + ((A * m) * y) = A * (k * x + m * y) BY <1>7`
+`<1>9  (B * x) + (C * y) = A * (k * x + m * y) BY <1>7, <1>8`
+
+The next three steps are basic arithmetic to achieve the form (B * x) + (C * y) = A * (some natural number). After this, only one last step is necessary to complete the proof:
+
+`<1>10 QED BY <1>9 DEF Divides`
+
+So using fact <1>9, we are able to finally prove our theorem. 
+
+![LinearComb](/assets/images/tlaps/linearcomb.png)
+
+### 7.1. Not following my own advice
+While this example shows the methodical steps behind structured proofs and how to refer to previous steps to prove the current step, TLAPS was actually much smarter than I gave it credit for. I noticed that some steps of my proof were redundant when commenting tem out, and then after I removed, all of them...
+
+
+![LinearComb-Obvious](/assets/images/tlaps/linearcomb-obv.png)
+
+So actually, supplying the definition of Divides to TLAPS was sufficient for the backend provers to prove this theorem. My original definition of Divides had an extra `d <= n` constraint that I removed while doing some other proofs, since it was an unnecessary constraint, and that was one of the things that made this proof obvious to TLAPS. The lesson to learn here: **always check the `OBVIOUS` and `BY DEF <..relevant definitions..>` proofs first before trying to prove anything else**.
+
+## 8. Conclusions
+
+TLAPS is a really useful proof system that forces users to write rigorous mathematical proofs. After a while, it mostly feels like working together with the proof system to achieve some goal, as opposed to struggling to teach it some obvious fact. The main window into what the proof system is "thinking" is the **Interesting Obligations** window when it can't prove something. I intend to combine my models in standard TLA+/PlusCal/TLC with TLAPS, since we are just scratching the surface of the proof system in this post. It's also capable of checking temporal logic to a degree, and can handle induction over the natural numbers, among many other capabilities. 
+
+To continue learning TLAPS, the resources on TLAPS from [my initial post on Learning TLA+](https://sriramsami.com/tlaplus/) were my main references. I'm not reproducing those references here, in order to limit any updates to the list to just that post. I'd recommend reading through those resources multiple times in different orders until more of TLAPS begins to make sense.
+
+
+
+
