--- a/_posts (copy)/2018-10-27-lwnmeta.markdown
+++ b/_posts (copy)/2018-10-27-lwnmeta.markdown
@@ -7,7 +7,7 @@ headerImage: false
 tag:
 - lwn
 - directory
-star: true
+star: false
 category: blog
 author: sriram
 description: A list of articles that I think are great on LWN
