Update website for LAPD work

--- a/_posts/2018-10-27-lwnmeta.markdown
+++ b/_posts/2018-10-27-lwnmeta.markdown
@@ -1,5 +1,5 @@
 ---
-title: "A Directory of LWN Articles I Like"
+title: "My Favorite LWN Articles"
 layout: post
 date: 2018-10-27 12:24
 image: /assets/images/markdown.jpg
