--- a/_posts/2022-03-31-secrets.markdown
+++ b/_posts/2022-03-31-secrets.markdown
@@ -26,4 +26,6 @@ This puzzle is based within the aforementioned system. Your knowledge of operati
 
 The idea behind this puzzle is to enjoy the **learning process** and not just the solution. In fact, getting the solution is perhaps the least interesting part of this whole thing. Enjoy, explore, and hopefully appreciate a piece of OS history.
 
-# **[Download puzzle here](/assets/secrets.ova)**
+# [Download puzzle here](/assets/secrets.ova)
+
+# **[Mirror: potentially faster download here](https://drive.google.com/file/d/1b19pfygF1Ibaj5FxiY9JJeSiLQ1JukOW/view?usp=sharing)**
